# mindVisualizer

./: .gitignore  README.md  pyproject.toml
examples/: flow_probe_example.py  rdcim_propagation.py  roi_flow_mode.py
scripts/: download_roi_flow_data.py  setup_extra_parcellation.py
src/: brain_state.py  extra_parcellation.py  main.py  mesh_overlay.py  probe.py  region_analyzer.py  roi_flow.py
